Get rid of perpetual/project stuff, update to include Imageflow

--- a/content/pricing/footer.slim
+++ b/content/pricing/footer.slim
@@ -61,7 +61,7 @@ Layout: false
       markdown:
         ## FAQ
         Q: Are licenses perpetual?
-        : Enterprise-wide subscription licenses become perpetual (for pre-existing versions) after 3 years. Some yearly subscriptions also allow you to purchase a perpetual upgrade for a one-time fee from your customer portal (or up-front).
+        : No. They are recurring subscriptions. You can cancel at any time, and you'll continue to receive all updates for the duration of your subscription.
 
         Q: Can I buy plugins individually?
         : No, and we do not make exceptions to this rule. 
