Improve product page

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -38,6 +38,7 @@
   background:linear-gradient(to bottom, rgba(154,200,0,1) 0%, rgba(135,181,0,1) 100%);
   text-shadow:0px 1px 0px rgba(1, 80, 1, 0.35);
 }
+.license-kind-container table { width: 100%; }
 
 .legal table{
   width: 100%;
