--- a/content/pricing/footer.slim
+++ b/content/pricing/footer.slim
@@ -5,9 +5,12 @@ Layout: false
     .span4
       markdown:
         ## Overview
-        The ImageResizer v4 core library and [18 plugins in the Essential edition](/plugins/editions/free) are free and open-source under the [Apache 2 license](/licenses/apache).
 
-        Development of ImageResizer is funded by our commerical licences to the Performance and Elite editions. Commercial licenses also include source code and permit modification; most permit redistribution. 
+        Imageflow, Imageflow Server, ImageResizer.Plugins.Imageflow, and ImageResizer 6+ are dual licensed under the AGPLv3 and a commercial license. Most commercial users will need a subscription license.
+
+        Commercial licenses also include source code and permit modification; most permit redistribution. 
+
+        The ImageResizer v4 core library and [18 plugins in the Essential edition](/plugins/editions/free) are free and open-source under the [Apache 2 license](/licenses/apache).
 
         All Imazen software is open-source, and your funds help (both directly, and indirectly) maintain dozens of critical low-level, permissively-licensed OSS libraries across a wide spectrum. Visit [our GitHub profile](https://github.com/imazen) to see some of the work we maintian. 
 
@@ -70,7 +73,7 @@ Layout: false
         : No, but customers in the USA can pay by bank debit (ACH). Sign up for a 30-day trial, then email sales@imazen.io and ask for us to enable ACH on your account. You'll then be able to [login to account.imazen.io](https://account.imazen.io) and securely enter your bank information and verify it with microtransactions. Once it's verified, you can switch to any subscription and pay by bank instead of credit card. This is all handled by Chargebee, our recurring billing partner.
 
         Q: Can I upgrade from one license to another? 
-        : You can switch between subscriptions in your customer portal. 
+        : You can switch between subscriptions in your customer portal. The pricing won't reflect your discount until the last step.
 
         Q: What can I use for free?
         : The [Essential Edition](/plugins/editions/essential). Check /resizer.debug to verify you're not using any paid/AGPL3 plugins.
