--- a/content/pricing/for.slim
+++ b/content/pricing/for.slim
@@ -20,31 +20,32 @@ css:
 
     .row-fluid
       .span12 style="text-align:center;"
-        - if request[:org][:restricted]
+        - if request[:org][:discount] != 0
           p style="font-weight:bold"
             | Exclusively for companies and organizations #{request[:org][:restricted]}
-            | Include parent companies and their subsidiaries in the employee count.
             a href="/pricing"
-              | Smaller/larger?
-          
+              |  Smaller/larger?
+            |  Include parent companies and their subsidiaries in the employee count.
         h2
-          | Unlimited servers, instances, and domains. One license key for your entire organization.
+          | Unlimited servers, instances, and domains. One flat rate, one license key for your entire organization.
         h2 style="color:#0FAD07;"
-          | Includes ImageResizer, Imageflow, and Imageflow Server
-        h4
-          | Redistribution with custom software is free. Add #{request[:org][:products][:addon_oem][:price_summary]} to distribute with a product (contact us). 
-        h4 
-          | Reselling usage? 4  
-          a href="/pricing/per-server" 
-            | SaaS server licenses
-          |  included. Extras are #{request[:org][:products][:addon_server_performance][:price_summary]} (Performance) or #{request[:org][:products][:addon_server_elite][:price_summary]} (Elite).
-        h4
-          | Existing customer? 
-          a href="https://account.imazen.io"
-            | Sign in to the customer portal
-          |  to switch between e-mail support (#{request[:org][:products][:addon_basic][:price_summary]}), 24/7 phone support (#{request[:org][:products][:addon_247][:price_summary]}), and 
-          a href="https://stackoverflow.com/tags/imageresizer" style="color: inherit"
-            | StackOverflow ($0).
+          | Paid subscriptions include 
+          a href="https://github.com/imazen/resizer"
+            | ImageResizer
+          | , 
+          a href="https://github.com/imazen/imageflow"
+            | Imageflow
+          | , and 
+          a href="https://github.com/imazen/imageflow-dotnet-server"
+            | Imageflow Server
+          | .
+        h3
+          | Reduce your risk and cost, improve your site performance/revenue, and innovate faster with our cutting-edge image processing and delivery platforms. 
+          | We've maintained URL compatibility for longer than most image SaaS companies have existed, across 15 years of rewrites and updates. Adding ?width=300 (etc) is so intuitive, it's almost invisible.
+          | We build with Rust and C#, and put security ahead of features and gimmicks. Support@imazen.io goes straight the lead developer, so you can count on stability being prioritized. 
+          | It's all open-source: avoid vendor-lock in, unpredictable fees, and compliance issues (host anywhere, achieve any security needs) with a single flat yearly rate. 
+          | Deployment costs are minimal; we provide Docker images, Dockerfiles, NuGet packages, and templates. 
+          | Our incredible security and stability record means no weekend calls. And we're here to help you migrate from your current provider without breaking any URLs (hopefully - some vendors really lock you in).
 
     .row-fluid
       .lrow 
@@ -116,21 +117,21 @@ css:
             h2.licensetitle Performance Edition Enterprise
             h3.licenseprice
               = request[:org][:products][:performance][:price_summary]
+          Cut load times for ANY site or app with our cutting-edge compression and maximum-fidelity imaging engine.
+          Innovate instantly with on-demand image modification; no build steps, no batch processing required. 
           ul.licensecontent
-            li Includes Imageflow, Imageflow Server, and ImageResizer Peformance
-            li Cut load times for ANY site or app with our cutting-edge compression and maximum-fidelity imaging engine.
-            li Innovate instantly with on-demand image modification; no build steps, no batch processing required
-            li It's all open-source: avoid vendor-lock in, unpredictable fees, and compliance issues with a single flat yearly rate. 
-            li We've maintained URL compatibility for longer than most image SaaS companies have existed, across 15 years of rewrites and updates.
-            li We put security first (before features), and use Rust and C# primarily. 
-            li Use source files from Azure, Amazon S3, remote HTTP servers, or disk and get variants instantly. 
+            li Includes Imageflow (built in Rust) and bindings to many languages for in-process use on Windows, Linux, and macOS.            
+            li Includes Imageflow Server (built with .NET 6 and 8) and Docker images for 'microservice' deployment, as well as NuGet packages for 'monolith' inclusion within a ASP.NET 6+ app.
+            li Includes ImageResizer Perfomance Edition (built with .NET 4.8, Windows-only) for use in .NET Framework applications (or as a standalone app).
+            li Includes Imageflow Tool (built in Rust) for command-line and scripted use. *does not include cloud or caching features.
             li Increase product appeal with our novel resizing+sharpening enhancement engine. Smart-crop whitespace or add watermarks with ease.
+            li Achieve incredible file sizes and fidelity, with cutting-edge compression algorithms for WebP, JPEG, GIF, and PNG files.
+            li Use source files from Azure, Amazon S3, remote HTTP servers, or disk and get variants instantly. 
             li Cache to cloud (in preview), memory, and disk with our 10th gen cache database engine. Just Works with any CDN for additional edge caching.
-            li Supports WebP, Jpeg, Gif, Png. 
-            li Exstensible with C#; supports custom authorization, authentication, and watermarking rules. 
-          ImageResizer (prior to v5) does not include all of the above features:
+            li Extensible with C#; supports custom authorization, authentication, and watermarking rules. 
+          | ImageResizer (prior to v5) does not include all of the above features:
           a href="/plugins/editions/performance"
-              |  See the ImageResizer v4 plugin/feature list
+              |  See the ImageResizer v4 plugin/feature list.
           .buy-buttons
             a.btn.btn-primary.btn-buynow-orange href=request[:org][:products][:performance][:monthly][:link]
               span
@@ -153,6 +154,20 @@ css:
           | All plans are recurring and will charge your card at the specified interval until canceled. 
         h2 
           | Need help? Email sales@imazen.io 
+        h4
+          | Redistribution with custom software is free. Add #{request[:org][:products][:addon_oem][:price_summary]} to distribute with a product (contact us). 
+        h4 
+          | Reselling usage? 4  
+          a href="/pricing/per-server" 
+            | SaaS server licenses
+          |  included. Extras are #{request[:org][:products][:addon_server_performance][:price_summary]} (Performance) or #{request[:org][:products][:addon_server_elite][:price_summary]} (Elite).
+        h4
+          | Existing customer? 
+          a href="https://account.imazen.io"
+            | Sign in to the customer portal
+          |  to switch between e-mail support (#{request[:org][:products][:addon_basic][:price_summary]}), 24/7 phone support (#{request[:org][:products][:addon_247][:price_summary]}), and 
+          a href="https://stackoverflow.com/tags/imageresizer" style="color: inherit"
+            | StackOverflow ($0).
 
     div style="clear:both"
   == partial :"editions"
