--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -33,20 +33,19 @@ Layout: false
       .span4
         h3 About
         markdown:
-          ImageResizer is the result of 9 years of continual refinement, with a focus on security, stability, and image quality. Thousands of popular websites rely on ImageResizer; some with millions of pageviews each day, like [Sierra Trading Post, MSN, and eBay](/testimonials).
+          The first version of ImageResizer was deployed in 2005. Since then, it's been rewritten many times, as we gained experience and learned what customers need the most. 
+          Imageflow is our next-gen imaging engine for the cloud, written in Rust, and tested in production environments for over 7 years. 
+          Imageflow Server processes, caches, and delivers images with incredible speed, security, uptime, and image quality. And it's still compatible with ImageResizer URLs from the aughts. 
+          
+          Thousands of popular websites rely on Imageflow Server and ImageResizer; some with [millions of pageviews each day](/testimonials).
 
-          It provides far more than image resizing; [with our 40+ plugins](/plugins), it becomes a **comprehensive media-processing suite**.
-
-          Don't doom your site to inevitable instability by [using flawed code from the internet](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Our core library is compact, free, and well-tested. `Install-Package ImageResizer`.
-
-          Not on Windows? Check out [Imageflow](https://imageflow.io) for a cross-platform solution that doesn't rely on any Windows APIs. 
-
-
+          
       .span4
         h3 Everything is on GitHub
         ul.star_list
-          li: a href="https://github.com/imazen/resizer" github.com/imazen/resizer
+          li: a href="https://github.com/imazen/imageflow-dotnet-server" Imageflow Server
           li: a href="https://github.com/imazen/imageflow" github.com/imazen/imageflow
+          li: a href="https://github.com/imazen/resizer" github.com/imazen/resizer
           li: a href="https://github.com/imazen" github.com/imazen
           li: a href="https://github.com/lilith" github.com/lilith
 
