--- a/content/pricing/for.slim
+++ b/content/pricing/for.slim
@@ -43,7 +43,7 @@ css:
           | We build with Rust and C#, and put security ahead of features and gimmicks. Support@imazen.io goes straight the lead developer, so you can count on stability being prioritized. 
           | It's all open-source: avoid vendor-lock in, unpredictable fees, and compliance issues (host anywhere, achieve any security needs) with a single flat yearly rate. 
           | Deployment costs are minimal; we provide Docker images, Dockerfiles, NuGet packages, and templates. 
-          | Our incredible security and stability record means no weekend calls. And we're here to help you migrate from your current provider without breaking any URLs (hopefully - some vendors really lock you in).
+          | Our incredible security and reliability record means no weekend calls. And we're here to help you migrate from your current provider without breaking any URLs (hopefully - some vendors really lock you in).
 
     .row-fluid
       .lrow 
