Move discontinued licenses to their own page for cleanliness

--- a/content/pricing/footer.slim
+++ b/content/pricing/footer.slim
@@ -31,16 +31,8 @@ Layout: false
          * [AGPLv3][agpl]
          * [Imazen Contributor Agreement](/licenses/contribute)
          * [Imazen Software Grant and Corporate Contributor License Agreement](/licenses/contribute-corp)
-         * [PdfRenderer License](/licenses/pdfrenderer)
 
-         ## Discontinued licenses
-
-         * [Resizer Freedom][freedom]
-         * [Resizer Domain][domain]: The [Performance](/plugins/editions/performance) and [Creative](/plugins/editions/creative) editions are provided under this license.
-         * [Resizer Enterprise][enterprise]: The [Elite edition](/plugins/editions/elite), OEM, and SaaS products include and Enterprise license.
-         * [Resizer OEM][oem]: You buy this for business-wide use and resale.
-         * [Resizer SaaS][saas]: You buy this for using ImageResizer in a SaaS product. 
-
+         Discontinued licenses are listed [here](/licenses/discontinued).
 
         [freedom]: /licenses/freedom  "Resizer Freedom License"
         [trial]: /licenses/trial  "Resizer Trial License"
