Drop GTM, add plausible

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -21,7 +21,8 @@ html(lang="en" class="no-js")
     meta name="viewport" content="width=device-width, initial-scale=1"
 
     == partial :gtm
-
+    == partial :plausible
+    
     link href="/css/less/site.css" rel="stylesheet"
     / - if page.lib? :twentytwenty
     /   link href="/css/twentytwenty.css" rel="stylesheet"
