--- a/content/_layout/fonts.slim
+++ b/content/_layout/fonts.slim
@@ -4,7 +4,7 @@ css:
     font-family: 'Boogaloo';
     font-style: normal;
     font-weight: 400;
-    src: local('Boogaloo'), local('Boogaloo-Regular'), url(https://fonts.gstatic.com/s/boogaloo/v6/selWIQWiQA98uHaoODndYnYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2');
+    src: local('Boogaloo'), local('Boogaloo-Regular'), url(/fonts/selWIQWiQA98uHaoODndYnYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
   /* latin */
@@ -12,7 +12,7 @@ css:
     font-family: 'Droid Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Droid Sans'), local('DroidSans'), url(https://fonts.gstatic.com/s/droidsans/v6/s-BiyweUPV0v-yRb-cjciAzyDMXhdD8sAj6OAJTFsBI.woff2) format('woff2');
+    src: local('Droid Sans'), local('DroidSans'), url(/fonts/s-BiyweUPV0v-yRb-cjciAzyDMXhdD8sAj6OAJTFsBI.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
   /* latin */
@@ -20,7 +20,7 @@ css:
     font-family: 'Droid Sans';
     font-style: normal;
     font-weight: 700;
-    src: local('Droid Sans Bold'), local('DroidSans-Bold'), url(https://fonts.gstatic.com/s/droidsans/v6/EFpQQyG9GqCrobXxL-KRMWaVI6zN22yiurzcBKxPjFE.woff2) format('woff2');
+    src: local('Droid Sans Bold'), local('DroidSans-Bold'), url(/fonts/EFpQQyG9GqCrobXxL-KRMWaVI6zN22yiurzcBKxPjFE.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
   /* latin */
@@ -28,7 +28,7 @@ css:
     font-family: 'Droid Serif';
     font-style: normal;
     font-weight: 400;
-    src: local('Droid Serif'), local('DroidSerif'), url(https://fonts.gstatic.com/s/droidserif/v6/0AKsP294HTD-nvJgucYTaIgp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
+    src: local('Droid Serif'), local('DroidSerif'), url(/fonts/0AKsP294HTD-nvJgucYTaIgp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
   /* latin-ext */
@@ -36,7 +36,7 @@ css:
     font-family: 'Economica';
     font-style: normal;
     font-weight: 700;
-    src: local('Economica Bold'), local('Economica-Bold'), url(https://fonts.gstatic.com/s/economica/v4/UK4l2VEpwjv3gdcwbwXE9IjoYw3YTyktCCer_ilOlhE.woff2) format('woff2');
+    src: local('Economica Bold'), local('Economica-Bold'), url(/fonts/UK4l2VEpwjv3gdcwbwXE9IjoYw3YTyktCCer_ilOlhE.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -44,7 +44,7 @@ css:
     font-family: 'Economica';
     font-style: normal;
     font-weight: 700;
-    src: local('Economica Bold'), local('Economica-Bold'), url(https://fonts.gstatic.com/s/economica/v4/UK4l2VEpwjv3gdcwbwXE9Bampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+    src: local('Economica Bold'), local('Economica-Bold'), url(/fonts/UK4l2VEpwjv3gdcwbwXE9Bampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
   /* latin-ext */
@@ -52,7 +52,7 @@ css:
     font-family: 'Economica';
     font-style: italic;
     font-weight: 400;
-    src: local('Economica Italic'), local('Economica-Italic'), url(https://fonts.gstatic.com/s/economica/v4/bzOVz_30ksVskVYQI1-p8qE8kM4xWR1_1bYURRojRGc.woff2) format('woff2');
+    src: local('Economica Italic'), local('Economica-Italic'), url(/fonts/bzOVz_30ksVskVYQI1-p8qE8kM4xWR1_1bYURRojRGc.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -60,7 +60,7 @@ css:
     font-family: 'Economica';
     font-style: italic;
     font-weight: 400;
-    src: local('Economica Italic'), local('Economica-Italic'), url(https://fonts.gstatic.com/s/economica/v4/bzOVz_30ksVskVYQI1-p8ogp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
+    src: local('Economica Italic'), local('Economica-Italic'), url(/fonts/bzOVz_30ksVskVYQI1-p8ogp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
   /* latin-ext */
@@ -68,7 +68,7 @@ css:
     font-family: 'Source Code Pro';
     font-style: normal;
     font-weight: 500;
-    src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'), url(https://fonts.gstatic.com/s/sourcecodepro/v6/leqv3v-yTsJNC7nFznSMqYiWhBA8PULXA-6K3RG7rOb3rGVtsTkPsbDajuO5ueQw.woff2) format('woff2');
+    src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'), url(/fonts/leqv3v-yTsJNC7nFznSMqYiWhBA8PULXA-6K3RG7rOb3rGVtsTkPsbDajuO5ueQw.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -76,6 +76,6 @@ css:
     font-family: 'Source Code Pro';
     font-style: normal;
     font-weight: 500;
-    src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'), url(https://fonts.gstatic.com/s/sourcecodepro/v6/leqv3v-yTsJNC7nFznSMqQkmYxw_9-DA-DdfP1SWvz8.woff2) format('woff2');
+    src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'), url(/fonts/leqv3v-yTsJNC7nFznSMqQkmYxw_9-DA-DdfP1SWvz8.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
   }
