Remove broken newsletter signup links

--- a/content/download.slim
+++ b/content/download.slim
@@ -62,16 +62,16 @@ h1 Download ImageResizer
       |  We hear 
       em all the time 
       | from customers who never realized the sheer variety of ImageResizer's capabilities. Come and see some of ImageResizer's wide assortment of features.
-    li
-      a href="/newsletter/signup" Make sure you signed up for our newsletter. 
-      |It's only happened once (a long time ago), but if there is a security-related bug, this is how we let you know. 
-      strong Extremely low-volume.
+    / li
+    /   a href="/newsletter/signup" Make sure you signed up for our newsletter. 
+    /   |It's only happened once (a long time ago), but if there is a security-related bug, this is how we let you know. 
+    /   strong Extremely low-volume.
 
-  p
-    form#signupform.form-inline method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8"
-      input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
-      | Email: 
-      input type="text" name="email" placeholder="name@domain.com"
-      |  &nbsp; 
-      button type="submit" name="Submit" class="btn btn-primary" style="margin-bottom:10px"
-       | Subscribe (avg 4 per year) &raquo;
+  / p
+  /   form#signupform.form-inline method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8"
+  /     input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
+  /     | Email: 
+  /     input type="text" name="email" placeholder="name@domain.com"
+  /     |  &nbsp; 
+  /     button type="submit" name="Submit" class="btn btn-primary" style="margin-bottom:10px"
+  /      | Subscribe (avg 4 per year) &raquo;
