--- a/content/newsletter/signup.slim
+++ b/content/newsletter/signup.slim
@@ -14,16 +14,19 @@ markdown:
   You will only be e-mailed about important updates, news, and notifications regarding ImageResizer. I do not rent, share, or sell your info to anyone.
 
   You can unsubscribe at any time.
+  
 
-form#signupform method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" 
-  input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
-  h3 style="margin-bottom:0"
-    | Notify me when important updates are available
+  Sorry, our mailing list is not currently active. Please check back later.
 
-  p style="margin-top:10px"
-    | Email: 
-    input type="text" name="email"
-    |  &nbsp;  
-    button class="btn btn-primary" type="submit" name="Submit"
-      | Get notified (avg 8 per year)
+/ form#signupform method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" 
+/   input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
+/   h3 style="margin-bottom:0"
+/     | Notify me when important updates are available
+
+/   p style="margin-top:10px"
+/     | Email: 
+/     input type="text" name="email"
+/     |  &nbsp;  
+/     button class="btn btn-primary" type="submit" name="Submit"
+/       | Get notified (avg 8 per year)
 
