--- a/content/pricing/for.slim
+++ b/content/pricing/for.slim
@@ -28,7 +28,7 @@ css:
             |  Include parent companies and their subsidiaries in the employee count.
         h2
           | Unlimited servers, instances, and domains. One flat rate, one license key for your entire org, for 
-          | a href="https://github.com/imazen/resizer"
+          a href="https://github.com/imazen/resizer"
             | ImageResizer
           | , 
           a href="https://github.com/imazen/imageflow"
@@ -36,7 +36,7 @@ css:
           | , and 
           a href="https://github.com/imazen/imageflow-dotnet-server"
             | Imageflow Server
-          | combined.
+          |  combined.
         h4
           | Reduce your risk and cost, improve your site performance/revenue, and innovate faster with our cutting-edge image processing and delivery platforms. 
           | We've maintained URL compatibility for longer than most image SaaS companies have existed, across 15 years of rewrites and updates. Adding ?width=300 (etc) is so intuitive, it's almost invisible. 
