--- a/content/_layout/plausible.slim
+++ b/content/_layout/plausible.slim
@@ -1,2 +1,2 @@
 - if config.plausible
-    script defer data-domain="imageresizing.net" src="https://plausible.io/js/script.js"
+  script defer=true data-domain="imageresizing.net" src="https://plausible.io/js/script.js"
